# projects

./: .gitignore  .gitmodules  README.md  dependa_fix.rs  dependa_fix.sh
BloodhoundGUI/: bloodhound.cna
PDFGen/: .eslintrc.json  .gitignore  package-lock.json  package.json  tsconfig.json
PDFGenFE/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.ts
PwnieLab/: build.py  variables.tf
SPADocker/: README.md  docker-entrypoint.sh  dockerfile  index.html  inject.go  nginx.conf
acme_test_server/: Cargo.toml  PKGBUILD  acme.service  acme.socket
adventOfCode/: Cargo.toml  Readme.md  pyproject.toml  template.py  template.rs
aiexec/: Cargo.toml
aiexec/aiexec_be/: Cargo.toml
aiexec/aiexec_be/src/: main.rs
aiexec/aiexec_be/src/openai/: db.rs  mod.rs
ajvmiddleware/: .npmignore  .travis.yml  README.md  package-lock.json  package.json
alfred/: .doer  Cargo.toml
assetloader/: .npmignore  .travis.yml  README.md  package-lock.json  package.json  tsconfig.json
automap/: .dockerignore  Cargo.toml  askama.toml  build.sh  dockerfile  run.sh  scan.xml
automap/src/: main.rs  scan_result.rs
automap/templates/: index.html  port.html
basicPlatform/: README.md  dockerfile  package-lock.json  package.json  tsconfig.json  webpack.config.js
bees/: Cargo.toml
bevy_web/: Cargo.toml
billion/: .gitignore  Cargo.toml  Makefile  main.c
bootstrap/: config.yml  root_app.yml
brain/: Cargo.toml
c2profilejs/: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  deploy.sh  dockerfile  package-lock.json  package.json  readme.md  tsconfig.json  tslint.json  webpack.config.js
canvasapi/: README.md  package-lock.json  package.json  tsconfig.json  tslint.json
chachki/: Cargo.toml
cluster/: external_secrets.yml  longhorn.yml  metallb.yml
codedcolors/: .dockerignore  Dockerfile  README.md  envConfig.sh  nginx.conf  package-lock.json  (+3 more)
covert_c2/covert_client/: Cargo.toml  README.md
covert_c2/covert_client/examples/: client.rs
covert_c2/covert_client/src/: lib.rs
covert_c2/covert_common/: Cargo.toml  README.md
covert_c2/covert_common/src/: lib.rs
covert_c2/covert_common/src/test/: mod.rs
covert_c2/covert_server/: Cargo.toml  README.md
covert_c2/covert_server/examples/: server.rs
covert_c2/covert_server/src/: lib.rs
covert_c2_ping/covert_c2_ping_client/: Cargo.toml
covert_c2_ping/covert_c2_ping_client/src/: main.rs
covert_c2_ping/covert_c2_ping_server/: Cargo.toml  build.rs
covert_c2_ping/covert_c2_ping_server/src/: environment.rs  main.rs  nft.rs  patcher.rs  web.rs  worker.rs
covert_c2_ping/covert_c2_ping_server/src/nft/: mod copy.rs  mod.rs
covert_c2_ping/covert_c2_ping_server/src/workers/: mod.rs  ping.rs  session.rs  web.rs
covert_c2_ping/covert_c2_ping_web/: Cargo.toml  index.html  main.css
covert_c2_ping/covert_c2_ping_web/src/: agent_list.rs  edit_agent.rs  main.rs  new_agent.rs
cyber_npc/controller/backend/: Cargo.toml
cyber_npc/controller/backend/src/: assignments.rs  main.rs  scale.rs  tasks.rs  vms.rs
cyber_npc/vmware_gateway/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
disscan/: Cargo.toml
disscan/src/: main.rs  queue.rs
factorio_server/: .gitignore  Cargo.toml  README.md  dockerfile  package-lock.json  package.json  tsconfig.json
factorio_server/__tests__/: main.test.ts
factorio_server/factorio_server/: Cargo.toml
factorio_server/factorio_server/src/: main.rs  map_settings.json  service.rs
factorio_server/factorio_server/src/settings/: htmx.rs  map.rs  map_gen.rs  mod.rs  server.rs
factorio_server/factorio_server/src/ui/: index.html  server_settings.html
factorio_server/factorio_ui/: Cargo.toml
factorio_server/src/: main.rs  map_gen_settings.json  service.rs
factorio_server/src/lib/: process_control.ts
factorio_server/src/settings/: map_gen.rs  server.rs
factorio_server/ui/: package-lock.json  package.json  tsconfig.json
factorio_server/ui/src/: App.tsx
javautil/: .gitignore  pyproject.toml
javautil/javautil/: __init__.py  attributes.py  cli.py  code.py  consts.py  java_class.py  sections.py
javautil/test/: test_code.py
obfuscate_string/: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Readme.md
obfuscate_string/src/: main.rs
obfuscate_string/test/: test.c  test_ob.c
opstation/: .gitignore  Cargo.toml  build.rs  cleanup.sh
opstation/nl/: Makefile  compile_flags.txt  nl.c
opstation/src/: lib.rs  machine.rs  main.rs  nl.rs  raw.rs  util.rs  wg.rs
opstation/src/manager/: mod.rs  mount.rs  net.rs  rootfs.rs  tty.rs
opstation/src/manager/namespace/: net.rs
opstation/src/namespace/: mod.rs  mount.rs  net.rs
opstation/src/raw/: loop_ctrl.rs  mod.rs
opstation/src/server/: mod.rs  rootfs.rs
oswa/xss_server/: Cargo.toml
oswa/xss_server/src/: implant.js  main.rs
oswa/xss_server/static/: error.xml  foo.js  foo.xml  hello.xml  index.html  other copy.xml  other.xml
peer_router/: Cargo.toml
peer_router/examples/: example.rs
peer_router/src/: job.rs  lib.rs  link.rs  router.rs  stream.rs  tls.rs  tls_test.rs  tunnel.rs
playground/ip_iter/: pyproject.toml
playground/ip_iter/ip_iter/: __init__.py  __main__.py
playground/test_no_std/: Cargo.toml  README.md
playground/test_no_std/src/: main.rs
quickshare/: Cargo.toml
quickshare/src/: client.rs  main.rs  server.rs
rose/: Cargo.toml  README.md
rose/.cargo/: config.toml
rose/src/: fft.rs  kvm.rs  lib.rs  main.rs  raw.rs
voice_assistant/: .dockerignore  .env  Cargo.toml  dockerfile
voice_assistant/src/: chat.rs  main.rs  reject.xml  respond.xml
weasy/cli/: Cargo.toml
weasy/cli/src/: main.rs
weeziers/weezie-core/: Cargo.toml
weeziers/weezie-core/examples/: main.rs
weeziers/weezie-core/src/: lib.rs  main.rs  messages.rs
weeziers/weezie-core/src/entry/: mod.rs
weeziers/weezie-core/src/extensions/: tcp.rs
wordlistd/: Cargo.toml  wordlistctl
wordlistd/src/: cli.rs  dbus.rs  lib.rs  main.rs  server.rs  util.rs
wordlistd/src/backend/: mod.rs  sqlite.rs
wordlistd/src/clients/: mod.rs  sqlite.rs
wordlistd/src/servers/: dbus.rs  mod.rs
(+727 files in other folders)
