cargo-features = ["per-package-target"]

[package]
edition = "2021"
name = "automap"
version = "0.1.0"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros", "ws"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3.31"
quick-xml = { version = "0.38.3", features = ["serde", "serialize", "serde-types", "overlapped-lists", "tokio", "async-tokio"] }
serde = "1.0.225"
serde_json = "1.0.145"
tokio = {version = "1", features = ["full"]}
