[package]
edition = "2021"
name = "disscan"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
serde = {version = "1.0.171", features = ["derive"]}
serde_json = {version = "1.0.103", features = ["alloc"]}
tokio = {version = "1.29.1", features = ["full"]}
