[package]
edition = "2021"
name = "factorio_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
tokio = {verson = "1.22.0", features = ["full"]}
