[tool.poetry]
name = "javautil"
version = "0.1.0"
description = ""
authors = ["hattmo <matthew@hattmo.com>"]

[tool.poetry.scripts]
javautil = "javautil.cli:main"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
toml = "^0.10.2"
pytest = "^6.2.5"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
