[tool.poetry]
name = "javautil"
version = "0.1.0"
description = ""
authors = ["hattmo <matthew@hattmo.com>"]

[tool.poetry.scripts]
javautil = "javautil.cli:main"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
