[package]
authors = ["Matthew \"Oscar\" Howard"]
description = "Rewrites c files to remove string literals"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "easy_obfuscate"
publish = false
readme = "./Readme"
version = "0.1.0"

[dependencies]
anyhow = "1"
clap = {version = "4", features = ["derive"]}
nom = "7.1.3"
rand = "0.8"
tree-sitter = "0.20"
tree-sitter-traversal = "0.1.2"

[build-dependencies]
cc = "*"
