[package]
name = "opstation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
env_logger = "0.10.1"
libc = "0.2.149"
log = "0.4.20"
nix = { version = "0.27.1", features = ["fs", "socket", "mount"] }
uuid = { version = "1.6.1", features = ["v4"] }
