[package]
name = "peer_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rand_core = { version = "0.5.1", features = ["getrandom"] }
serde = { version = "1.0.180", features = ["derive"] }
x25519-dalek = { version = "1.2.0", features = ["serde"] }
