[package]
name = "peer_router"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes"] }
ed25519-dalek = { version = "2.1.1", default-features = false }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["zeroize"] }
