[package]
name = "peer_router"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10", default-features = false, features = ["aes","arrayvec"] }
arrayvec = { version = "0.7", default-features = false }
ed25519-dalek = { version = "2", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = ["zeroize"] }
