[package]
name = "quickshare"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.16", features = ["derive"] }
crossterm = "0.28.1"
libc = "0.2.169"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive", "rc"] }
sha2 = "0.10.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
