[package]
name = "rose"
version = "0.1.1"
edition = "2021"
publish = ["gitea"]

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
libc = "0.2.153"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = "0.22.1"
rand = "0.8.5"
rustfft = "6.2.0"
textplots = "0.8.6"
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3.18"

