[package]
edition = "2021"
name = "voice_assistant"
version = "0.1.0"

[dependencies]
anyhow = "1"
axum = {version = "0.8", features = ["form"]}
clap = { version = "4", features = ["derive"] }
futures = "0.3"
ngrok = {version = "0.15", features = ["axum"]}
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
tower-http = {version = "0.6", features = ["tracing", "trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
