cargo-features = ["per-package-target"]

[package]
default-target = "x86_64-pc-windows-gnu"
edition = "2021"
name = "covert_c2_ping_client"
version = "0.1.1"

[dependencies]
aes = "0.8"
anyhow = "1"
bincode = "1"
covert_c2_ping_common = {path = "../covert_c2_ping_common"}
covert_client = "0.1"
covert_common = "0.1"
rand = "0.8"
serde = {version = "1", features = ["derive"]}

[dependencies.windows]
features = [
  "Win32_NetworkManagement_IpHelper",
  "Win32_System_WindowsProgramming",
  "Win32_Foundation",
  "Win32_Networking_WinSock",
]
version = "0.42.0"
