cargo-features = ["per-package-target"]
[package]
default-target = "wasm32-unknown-unknown"
edition = "2021"
name = "covert_c2_ping_web"
version = "0.1.0"

[dependencies]
covert_c2_ping_common = {path = "../covert_c2_ping_common"}
gloo = "0.8.0"
gloo-utils = {version = "0.1.5", features = ["serde"]}
js-sys = "0.3.60"
log = "0.4.17"
serde = {version = "1.0.145", features = ["serde_derive"]}
serde_json = "1.0.86"
wasm-bindgen = {version = "0.2.83", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
web-sys = {version = "0.3.60", features = ["HtmlAnchorElement"]}
yew = "0.19"
