[project]
name = "vsphere_proxy"
version = "1.0.0"
description = "VMware vSphere proxy controller with Flask API for VM keyboard input and screenshots"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Matthew Howard", email = "matthew@hattmo.com" }
]
keywords = ["vmware", "vsphere", "pyvmomi", "flask", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Hardware",
]
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "pyvmomi>=9.0.0.0",
]

[project.scripts]
vsphere-proxy = "main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "main.py",
    "README.md",
]
