[package]
edition = "2021"
name = "xss_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.9"
tokio = {version = "1.25.0", features = ["full"]}
tower-http = {version = "0.4.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
