[package]
edition = "2021"
name = "xss_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.9", features = ["headers"] }
clap = { version = "4.2.5", features = ["derive", "env"] }
http = "0.2.9"
http-serde = "1.1.2"
mongodb = "2.5.0"
serde = { version = "1.0.160", features = ["derive"] }
tokio = {version = "1.25.0", features = ["full"]}
tower-http = {version = "0.4.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
