[tool.poetry]
name = "ip_iter"
version = "0.1.0"
description = ""
authors = ["Matthew Howard <matthew@hattmo.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^1.4.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
