[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = { version = "0.30.0", features = ["crossterm"] }
tokio = { version = "1.48.0", features = ["full"] }
zbus = { version = "5.12.0", features = ["tokio"] }
