[package]
edition = "2021"
name = "weezie-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
shellcode = ["dep:std"]

[dependencies]
bincode = "1.3.3"
ed25519-dalek = "1.0"
rand = {version = "0.7", features = ["std"]}
serde_json = "1.0.96"
std = {path = "../std", optional = true}
