[package]
name = "weezie-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.61"
bincode = "1.3.3"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
tokio = "1.24.2"
