[package]
name = "controller-backend"
edition = "2024"
version = "0.1.0"
description = "Backend API for Controller"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
matrix-sdk = { version = "0.9", default-features = false, features = ["rustls-tls"] }
matrix-sdk-base = { version = "0.9", default-features = false }
anyhow = "1"
tokio-util = "0.7.18"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hex = "0.4"
hmac-sha1-compact = "1.1.7"
kube = { version = "0.92", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22", features = ["v1_30"] }

[profile.release]
opt-level = 3
lto = true
